--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <div class="titulo__pagina">
   <h1 class="titulo__ubicacion">INICIO</h1>
 </div>
+<div class="carrucel__ubicacion">
   <div id="carouselExampleCaptions" class="carousel slide carrucel" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -60,15 +61,15 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="imagenes/yoda.jpg" class="carrucel__tamaño" alt="yoda impreso 3d">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>YODA</h5>
+        <div class="carousel-caption  d-md-block">
+          <h5 class="descripcion">YODA</h5>
           <p>Yoda de 50x50 <br> PRECIO:500$</p>
           <a href="carrito.html"><button type="button" class="btn btn-success">COMPRAR</button></a>
         </div>
       </div>
       <div class="carousel-item">
         <img src="imagenes/Torre-Eiffel.jpg" class="carrucel__tamaño" alt="torre eiffel impresa 3d">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption  d-md-block">
           <h5>TORRE-EIFFEL</h5>
           <p>Torre-Eiffel de 20x50 </p>
           <a href="carrito.html"><button type="button" class="btn btn-success">COMPRAR</button></a>
@@ -76,7 +77,7 @@
       </div>
       <div class="carousel-item">
         <img src="imagenes/cabeza.jpg" class="carrucel__tamaño" alt="cabeza impresa 3d">
-        <div class="carousel-caption d-none d-md-block">
+        <div class="carousel-caption  d-md-block">
           <h5>CABEZA TAMAÑO REAL</h5>
           <p>Cabeza tamaño real 34x58</p>
           <a href="carrito.html"><button type="button" class="btn btn-success">COMPRAR</button></a>
@@ -84,7 +85,7 @@
       </div>
     </div>
   </div>
-
+</div>
   <main role="main">
     <div class="album py-5 bg-light">
       <div class="container">
@@ -100,12 +101,12 @@
                     <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#thanos">VER</button>
                      <div class="modal fade" id="thanos" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                       <div class="modal-dialog">
-                       <div class="modal-content">
+                       <div class="modal-content" id="modali">
                         <div class="modal-header">
                          <h5 class="modal-title" id="staticBackdropLabel">Thanos (avengers: Infinity War Version)</h5>
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                          </div>
-                          <div class="modal-body">
+                          <div class="modal-body" id="modale">
                             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
                                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
