--- a/conocenos.html
+++ b/conocenos.html
@@ -54,7 +54,7 @@
   <div class="titulo__pagina">
   <h1 class="titulo__ubicacion">CONOCENOS</h1>
 </div>
-
+<div class="responsive">
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -76,7 +76,8 @@
       <span class="visually-hidden ubicacion__controld">Next</span>
     </button>
   </div>
-
+</div>
+<div class="acordion__responsive">
   <div class="accordion acordion1" id="accordionExample2">
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingOne2">
@@ -115,9 +116,11 @@
       </div>
     </div>
   </div>
+</div>
 <div class="titulo__pagina">
   <h3 class="titulo__ubicacion1">Agustin Colongne</h3>
 </div>
+<div class="responsive">
    <ul class="agus">
    <li class="carusel__agus"><div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
@@ -143,7 +146,7 @@
   <li class="info__agus">
     <div class="accordion" id="accordionExample">
         <div class="accordion-item">
-          <h2 class="accordion-header" id="headingOne">
+          <h2 class="accordion-header" id="headingOne   ">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
               Accordion Item #1
             </button>
@@ -181,7 +184,7 @@
       </div>
   </li>
 </ul>
-
+</div>
 <div class="titulo__pagina">
     <h3 class="titulo__ubicacion1">Noemi furini</h3>
   </div>
