--- a/productos.html
+++ b/productos.html
@@ -10,13 +10,11 @@
     <title>Impreciones AYN | PRODUCTOS</title>
 </head>
 <body>
-  <div class="logo">
-    <div class="fondologo">
-      <div class="logo__tamaño">
-    <img class="tamaño__imagen" src="imagenes/logo.png" alt="logo">
-  </div >
-  </div>
-  </div>
+  <div class="fondologo">
+    <div class="logo__tamaño">
+  <img class="tamaño__imagen" src="imagenes/logo.png" alt="logo">
+</div >
+</div>
   <nav class="navbar navbar-light bg-light navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid titulo ">
       <a class="navbar-brand" href="index.html">
@@ -52,7 +50,7 @@
     </div>
   </nav>
   <div class="titulo__pagina">
-  <h1 class="titulo__ubicacion__productos">Nuestros productos</h1>
+  <h1 class="titulo__ubicacion">Nuestros productos</h1>
 </div>
 <main role="main">
     <div class="album py-5 bg-light">
