--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
                     <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#thanos">VER</button>
                      <div class="modal fade" id="thanos" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                       <div class="modal-dialog">
-                       <div class="modal-content" id="modali">
+                       <div class="modal-content">
                         <div class="modal-header">
                          <h5 class="modal-title" id="staticBackdropLabel">Thanos (avengers: Infinity War Version)</h5>
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                          </div>
-                          <div class="modal-body" id="modale">
+                          <div class="modal-body" >
                             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
                                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
